#
# Top Makefile for Magick++
#
# Copyright Bob Friesenhahn, 1999, 2000
#
AUTOMAKE_OPTIONS = 1.4 dist-zip

# Additional files to distribute
EXTRA_DIST =

SUBDIRS = bin lib tests demo

# Non-Automake subdirectories to distribute
#DISTDIRS = doc
#dist-hook:
#	( \
#	  builddir=`pwd` ; \
#	  cd $(srcdir) && \
#	  ( \
#	    for dir in $(DISTDIRS) ; do \
#	      find $$dir -depth -print | egrep -v '(~$$)|(\.bak$$)|(/CVS)|(/\.#)|(/\.deps)' | cpio -pdum $$builddir/$(distdir) 2> /dev/null ; \
#	    done \
#	  ) \
#	)
